--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joomla-build",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Gulp-based build/release system for Joomla! extensions",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,9 +25,8 @@
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-composer": "^0.4.5",
-    "gulp-newer": "^1.4.0",
-    "gulp-prune": "^0.2.0",
     "gulp-zip": "^4.2.0",
+    "vinyl-paths": "^2.1.0",
     "xml2js": "^0.4.19",
     "yargs": "^12.0.2"
   }
